[tool.poetry]
name = "slimer"
version = "0.1.0"
description = "Slimer reads your folder structure and file contents to transform it into a concise, readable string overview"
authors = ["Ben Villiere"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
slimer = 'slimer.main:main'

[tool.poetry.dependencies]
python = "^3.9"
pyperclip = "^1.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
coverage = "^7.3.2"
flake8 = "^6.1.0"
black = "^23.9.1"
bandit = "^1.7.5"
poetry = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
